force-app/main/default/objects/leaseworks__Interest_Rate_Index_Daily__c/leaseworks__Interest_Rate_Index_Daily__c.object-meta.xml
<CustomObject>
    <description>Interest Rate Index (Daily) serves as a vital repository for daily interest rate index data.
Record all the interest rates as of a particular date to be used for calculations.
Population Requirement Details: Conditionally Required if Interest Rate Index is being used.
[MODULE: Finance]
[LOAD: Yes]
[PREREQUISITES: Interest Rate Index]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Interest Rate Index (Daily)</label>
    <nameField>
        <label>Interest Rate Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interest Rate Indices (Daily)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>