force-app/main/default/objects/leaseworks__Interest_Rate_Index_Daily__c/fields/leaseworks__Interest_Rate_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interest_Rate_Date__c</fullName>
    <label>Interest Rate Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>