force-app/main/default/objects/leaseworks__Interest_Rate_Index_Daily__c/fields/leaseworks__Interest_Rate_Index__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interest_Rate_Index__c</fullName>
    <label>Interest Rate Index</label>
    <referenceTo>leaseworks__Interest_Rate_Index__c</referenceTo>
    <relationshipLabel>Interest Rate Indexes (Daily)</relationshipLabel>
    <relationshipName>Interest_Rate_Indexes_Daily</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>