force-app/main/default/objects/leaseworks__Interest_Rate_Index_Daily__c/fields/leaseworks__Interest_Rate_Prcntg__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interest_Rate_Prcntg__c</fullName>
    <description>Published Interest Rate for the referenced date</description>
    <inlineHelpText>Published Interest Rate for the referenced date</inlineHelpText>
    <label>Interest Rate %</label>
    <precision>9</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>